--- a/index.html
+++ b/index.html
@@ -708,13 +708,13 @@
                 <h1>Let's Try Again: Eliciting Multi-Turn Reasoning in Language Models via Simplistic Feedback</h1>
                 
                 <div class="authors">
-                    <div class="author"><a href="#" target="_blank">Licheng Liu<span class="superscript">1</span><span class="asterisk">*</span></a></div>
+                    <div class="author"><a href="https://lichengliu03.github.io/" target="_blank">Licheng Liu<span class="superscript">1</span><span class="asterisk">*</span></a></div>
                     <div class="author"><a href="https://zihanwang314.github.io/" target="_blank">Zihan Wang<span class="superscript">2</span><span class="asterisk">*</span></a></div>
-                    <div class="author"><a href="#" target="_blank">Linjie Li<span class="superscript">3</span></a></div>
-                    <div class="author"><a href="#" target="_blank">Chenwei Xu<span class="superscript">2</span></a></div>
-                    <div class="author"><a href="#" target="_blank">Yiping Lu<span class="superscript">2</span></a></div>
-                    <div class="author"><a href="#" target="_blank">Han Liu<span class="superscript">2</span></a></div>
-                    <div class="author"><a href="#" target="_blank">Avirup Sil<span class="superscript">4</span></a></div>
+                    <div class="author"><a href="https://scholar.google.com/citations?user=WR875gYAAAAJ&hl=en" target="_blank">Linjie Li<span class="superscript">3</span></a></div>
+                    <div class="author"><a href="https://chenwei-1999.github.io/" target="_blank">Chenwei Xu<span class="superscript">2</span></a></div>
+                    <div class="author"><a href="https://2prime.github.io/" target="_blank">Yiping Lu<span class="superscript">2</span></a></div>
+                    <div class="author"><a href="https://scholar.google.com/citations?user=XaFT1o4AAAAJ&hl=zh-CN" target="_blank">Han Liu<span class="superscript">2</span></a></div>
+                    <div class="author"><a href="https://research.ibm.com/people/avi-sil" target="_blank">Avirup Sil<span class="superscript">4</span></a></div>
                     <div class="author"><a href="https://limanling.github.io/" target="_blank">Manling Li<span class="superscript">2</span></a></div>
                 </div>
                 
