--- a/index.html
+++ b/index.html
@@ -894,7 +894,7 @@
             </p>
             
             <h3>Acknowledgement</h3>
-        <p>We thank all the contributors to this research and the institutions that supported this work. </p>
+        <p>We thank the [DeepSeek](https://github.com/deepseek-ai/DeepSeek-R1) team for providing the DeepSeek-R1 model and early conceptual inspirations. We are grateful to the [veRL](https://github.com/volcengine/verl) team for their infrastructure support and the [RAGEN](https://github.com/RAGEN-AI/RAGEN) team for their multi-turn RL framework.  </p>
 
 
         </div>
