--- a/index.html
+++ b/index.html
@@ -323,6 +323,18 @@
             max-width: 50%;
         }
 
+        .figure.teaser {
+            margin: 2rem auto;
+            max-width: 900px;
+        }
+
+        .figure.teaser img {
+            max-width: 100%;
+            height: auto;
+            border-radius: var(--radius-md);
+            box-shadow: var(--shadow-lg);
+        }
+
         .figure-caption {
             margin-top: 1rem;
             font-size: 0.9rem;
@@ -707,6 +719,14 @@
             <div class="title">
                 <h1>Let's Try Again: Eliciting Multi-Turn Reasoning in Language Models via Simplistic Feedback</h1>
                 
+                <!-- Teaser Image -->
+                <div class="figure teaser">
+                    <img src="assets/img/teaser.png" alt="UFO Method Teaser" style="max-width: 100%; margin: 2rem auto;">
+                    <div class="figure-caption">
+                        <strong>Teaser.</strong> UFO enables language models to learn multi-turn reasoning through minimal feedback like "Let's try again", significantly improving reasoning accuracy while maintaining single-turn performance.
+                    </div>
+                </div>
+                
                 <div class="authors">
                     <div class="author"><a href="https://lichengliu03.github.io/" target="_blank">Licheng Liu<span class="superscript">1</span><span class="asterisk">*</span></a></div>
                     <div class="author"><a href="https://zihanwang314.github.io/" target="_blank">Zihan Wang<span class="superscript">2</span><span class="asterisk">*</span></a></div>
@@ -743,7 +763,7 @@
             <div class="abstract">
                 <h3>Abstract</h3>
                 <p>
-                    Large language models often struggle with multi-turn reasoning, especially when trained with single-turn reinforcement learning paradigms. We identify that the lack of effective feedback in multi-turn scenarios leads to repetitive and suboptimal responses. To address this, we propose Unary Feedback as Observation (UFO), a simple yet powerful method that leverages minimal user feedback, such as “Let’s try again”, to guide models during iterative problem solving. Our approach can be seamlessly integrated into existing RL frameworks and significantly improves multi-turn reasoning accuracy by 14%, while maintaining single-turn performance. UFO demonstrates that even the simplest feedback can unlock more robust and interactive reasoning abilities in language models.
+                    Large language models often struggle with multi-turn reasoning, especially when trained with single-turn reinforcement learning paradigms. We identify that the lack of effective feedback in multi-turn scenarios leads to repetitive and suboptimal responses. To address this, we propose Unary Feedback as Observation (UFO), a simple yet powerful method that leverages minimal user feedback, such as "Let's try again", to guide models during iterative problem solving. Our approach can be seamlessly integrated into existing RL frameworks and significantly improves multi-turn reasoning accuracy by 14%, while maintaining single-turn performance. UFO demonstrates that even the simplest feedback can unlock more robust and interactive reasoning abilities in language models.
                 </p>
             </div>
 
@@ -768,7 +788,7 @@
                 We address the challenge that single-turn reinforcement learning (RL) often fails to endow language models with multi-turn reasoning abilities, leading to repetitive and unadaptive responses. Our approach, <strong>Unary Feedback as Observation (UFO)</strong>, reformulates multi-turn problem solving as a Markov Decision Process (MDP) using only static single-turn datasets and minimal feedback.
             </p>
             <p>
-                In UFO, the model interacts over multiple turns, receiving only negative feedback (e.g., “Try Again”) after incorrect answers. The observation at each step concatenates the original question, all previous attempts, and their feedback, requiring the model to revise its reasoning based solely on a history of failed attempts. This design enables multi-turn training without the need for dense supervision or tool-augmented environments.
+                In UFO, the model interacts over multiple turns, receiving only negative feedback (e.g., "Try Again") after incorrect answers. The observation at each step concatenates the original question, all previous attempts, and their feedback, requiring the model to revise its reasoning based solely on a history of failed attempts. This design enables multi-turn training without the need for dense supervision or tool-augmented environments.
             </p>
             <p>
                 We optimize the model using Proximal Policy Optimization (PPO), with two key reward shaping strategies: <em>reward decay</em> (to encourage early success) and a <em>repetition penalty</em> (to promote answer diversity). This framework allows the model to develop revision-aware, context-sensitive reasoning strategies, unlocking robust multi-turn capabilities from static datasets and minimal supervision.
