--- a/index.html
+++ b/index.html
@@ -755,7 +755,7 @@
             <div class="figure teaser">
                 <img src="assets/img/teaser.png" alt="UFO Method Teaser" style="max-width: 100%; margin: 2rem auto;">
                 <div class="figure-caption">
-                    <strong>Teaser.</strong> UFO enables language models to learn multi-turn reasoning through minimal feedback like "Let's try again", significantly improving reasoning accuracy while maintaining single-turn performance.
+                    UFO enables language models to learn multi-turn reasoning through minimal feedback like "Let's try again", significantly improving reasoning accuracy while maintaining single-turn performance.
                 </div>
             </div>
         </div>
