--- a/index.html
+++ b/index.html
@@ -755,7 +755,7 @@
             <div class="figure teaser">
                 <img src="assets/img/teaser.png" alt="UFO Method Teaser" style="max-width: 100%; margin: 2rem auto;">
                 <div class="figure-caption">
-                    UFO enables language models to learn multi-turn reasoning through minimal feedback like "Let's try again", significantly improving reasoning accuracy while maintaining single-turn performance.
+                    <strong> An example of using single-turn RL model for multi-turn problem solving. </strong> Model loses multi-turn capability, producing identical reasoning chains across interaction turns after being prompted that its answer is incorrect.
                 </div>
             </div>
         </div>
