--- a/index.html
+++ b/index.html
@@ -743,7 +743,7 @@
                     <a href="#" target="_blank" class="button">arXiv</a>
                     <a href="assets/pdf/UFO_paper.pdf" target="_blank" class="button">PDF</a>
                     <a href="https://github.com/lichengliu03/unary-feedback" target="_blank" class="button">Code</a>
-                    <a href="https://huggingface.co/LichengLiu03/ragen-ppo-multi-turn" target="_blank" class="button">Model</a>
+                    <a href="https://huggingface.co/LichengLiu03/Qwen2.5-3B-UFO" target="_blank" class="button">Model</a>
                 </div>
             </div>
         </div>
