--- a/index.html
+++ b/index.html
@@ -749,6 +749,17 @@
         </div>
     </header>
 
+    <section class="section">
+        <div class="container">
+            <div class="ad">
+                <h3>Advertisement</h3>
+                <p>
+                    📣 I’m currently applying for Ph.D. programs (Fall 2026). I led this project as the first author — co-designing and running all experiments, writing the initial draft, building the website, and releasing both the code and models. I’m actively seeking opportunities to continue this line of research and would be delighted to connect.
+                </p>
+            </div>
+        </div>
+    </section>
+    
     <!-- Teaser Image Section -->
     <section class="section" style="padding: 2rem 0;">
         <div class="container">
