--- a/index.html
+++ b/index.html
@@ -749,16 +749,9 @@
         </div>
     </header>
 
-    <section class="section">
-        <div class="container">
-            <div class="ad">
-                <h3>Advertisement</h3>
-                <p>
-                    📣 I’m currently applying for Ph.D. programs (Fall 2026). I led this project as the first author — co-designing and running all experiments, writing the initial draft, building the website, and releasing both the code and models. I’m actively seeking opportunities to continue this line of research and would be delighted to connect.
-                </p>
-            </div>
-        </div>
-    </section>
+    <div style="background-color: #f2f2f2; padding: 10px 20px; border-radius: 6px; font-size: 14px; text-align: center; margin-bottom: 20px;">
+      This website is maintained by the first author, who co-designed and conducted the experiments, drafted the initial paper, and released the code/models. Currently applying to Ph.D. programs (Fall 2026).
+    </div>
     
     <!-- Teaser Image Section -->
     <section class="section" style="padding: 2rem 0;">
