--- a/index.html
+++ b/index.html
@@ -803,7 +803,7 @@
                 </p>
             
             <div class="figure">
-                <img src="assets/img/flow_chart.png" alt="UFO Multi-turn Training Framework" style="max-width:120%; margin-left:-10%; margin-right:-10%;">
+                <img src="assets/img/flow_chart.png" alt="UFO Multi-turn Training Framework">
                 <div class="figure-caption">
                     <strong>Figure 2.</strong> Multi-turn training framework of UFO showing how models learn from unary feedback during iterative problem-solving processes.
                 </div>
