--- a/index.html
+++ b/index.html
@@ -777,7 +777,7 @@
 
             <!-- Unique Answer Ratio Comparison Figure -->
             <div class="figure medium">
-                <img src="assets/img/unique_answer_ratio_comparison.png" alt="Unique Answer Ratio Comparison">
+                <img src="assets/img/unique_answer_ratio_comparison.png" alt="Unique Answer Ratio Comparison" style="max-width: 80%;">
                 <div class="figure-caption">
                     <strong>Figure 1.</strong> Comparison of effective (unique) answer ratio (%) before and after RL training. Across single-turn RL methods, the unique answer ratio consistently drops after training across multiple model scales.
                 </div>
@@ -803,7 +803,7 @@
                 </p>
             
             <div class="figure">
-                <img src="assets/img/flow_chart.png" alt="UFO Multi-turn Training Framework">
+                <img src="assets/img/flow_chart.png" alt="UFO Multi-turn Training Framework" style="max-width:120%; margin-left:-10%; margin-right:-10%;">
                 <div class="figure-caption">
                     <strong>Figure 2.</strong> Multi-turn training framework of UFO showing how models learn from unary feedback during iterative problem-solving processes.
                 </div>
