--- a/index.html
+++ b/index.html
@@ -750,7 +750,7 @@
     </header>
 
     <div style="background-color: #f2f2f2; padding: 10px 20px; border-radius: 6px; font-size: 14px; text-align: center; margin-bottom: 20px;">
-      This website is maintained by the first author, who co-designed and conducted the experiments, drafted the initial paper, and released the code/models. Currently applying to Ph.D. programs (Fall 2026).
+      This website is maintained by the first author. Currently applying to Ph.D. programs (Fall 2026).
     </div>
     
     <!-- Teaser Image Section -->
