--- a/index.html
+++ b/index.html
@@ -759,7 +759,7 @@
             <div class="figure teaser">
                 <img src="assets/img/teaser.png" alt="UFO Method Teaser" style="max-width: 100%; margin: 2rem auto;">
                 <div class="figure-caption">
-                    <strong> Single-turn RL causes LLMs to repeat the same answer across turns instead of revising based on feedback. </strong>
+                    <strong> An example of using single-turn RL model for multi-turn problem solving. </strong> Model loses multi-turn capability, producing identical reasoning chains across interaction turns after being prompted that its answer is incorrect.
                 </div>
             </div>
         </div>
