--- a/index.html
+++ b/index.html
@@ -717,7 +717,7 @@
     <header class="header">
         <div class="container">
             <div class="title">
-                <h1>Let's Try Again: Eliciting Multi-Turn Reasoning in Language Models via Simplistic Feedback</h1>
+                <h1>UFO: A Simple "Try Again" Can Elicit Multi-Turn LLM Reasoning</h1>
                 
                 <div class="authors">
                     <div class="author"><a href="https://lichengliu03.github.io/" target="_blank">Licheng Liu<span class="superscript">1</span><span class="asterisk">*</span></a></div>
